[package]
name = "notify-win"
version = "0.1.0"
authors = ["Hilmar Gústafsson <hilmargustafs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.winrt]
version = "0.6.0"
features = ["windows-data", "windows-ui"]